--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -14,22 +14,42 @@ plugins {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+    // without this dependency grpc call from Hedera SDK throws an error
+    implementation 'io.grpc:grpc-okhttp:1.45.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.hedera.hashgraph:sdk-jdk7:2.10.1'
 }
 
-tasks.named('test') {
+test {
     // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+    useJUnitPlatform {
+        includeTags 'unit'
+        excludeTags 'integration', 'demo'
+    }
+}
+
+task integrationTests(type: Test) {
+    useJUnitPlatform {
+        includeTags 'integration'
+        excludeTags 'unit', 'demo'
+    }
+}
+
+task demoTests(type: Test) {
+    useJUnitPlatform {
+        includeTags 'demo'
+        excludeTags 'unit', 'integration'
+    }
+    testLogging.events "passed", "skipped", "failed", "standardOut", "standardError"
 }
 
 java {
